[package]
name = "duxcore"
version = "0.0.0"
edition = "2021"
description = "placeholder"
license = "Apache-2.0"
repository = "https://gitlab.com/dux-tool/duxcore"
readme = "README.md"

[dependencies]
config = "0.14.0"
clap = { version = "4.5.3", features = ["derive"] }
machineid-rs = "1.2.4"
serde = {version = "1.0.188", features= ["derive"]}
serde_yaml = "0.9.32"
serde_json = "1.0.114"
sha2 = "0.10.8"
ssh2 = "0.9.4"
tera = "1.20.0"
