[package]
name = "duxcore"
version = "0.1.2"
edition = "2021"
authors = ["Romzorus <romzorus591@gmail.com>"]
description = "Embed an automation engine (ansible like) right in your code and adapt it to your specific use cases"
keywords = ["automation", "devops", "task", "scalable", "configuration"]
license = "Apache-2.0"
repository = "https://gitlab.com/dux-tool/duxcore"
readme = "README.md"

[dependencies]
machineid-rs = "1.2.4"
serde = {version = "1.0.188", features= ["derive"]}
serde_yaml = "0.9.32"
serde_json = "1.0.114"
sha2 = "0.10.8"
ssh2 = "0.9.4"
tera = "1.20.0"
colored = "2.1.0"
termimad = "0.29.1"
pem = { version = "3.0.4", features = ["serde"] }
