[package]
name = "duxcore"
version = "0.1.6"
edition = "2021"
authors = ["Romzorus <romzorus591@gmail.com>"]
description = "Embed an automation engine right in your code and adapt it to your specific use cases"
keywords = ["automation", "devops", "task", "scalable", "configuration"]
license = "Apache-2.0"
repository = "https://gitlab.com/dux-tool/duxcore"
readme = "README.md"

[dependencies]
machineid-rs = "1.2.4"
serde = {version = "1.0.188", features= ["derive"]}
serde_yaml = "0.9.32"
serde_json = "1.0.114"
sha2 = "0.10.8"
ssh2 = "0.9.4"
tera = "1.20.0"
pem = { version = "3.0.4", features = ["serde"] }
chrono = "0.4.38"

[profile.release]
lto = true
